# config/routes.rb
@@ -6,6 +6,7 @@ Rails.application.routes.draw do
 
   namespace :api do
     namespace :v1 do
+      resource :dashboard, only: [ :show ], controller: "dashboard"
       resources :players, only: [ :index, :show ] do
         get :stats, on: :member
 
